--- a/style.css
+++ b/style.css
@@ -6,11 +6,10 @@
 }
 
 body {
+    background-image: linear-gradient(90deg, white, rgb(183, 129, 254));
     font-family: Montserrat;
     margin: 0;
     display: flex;
-    flex-direction: column;
-        /* aligns all elements on the page vertically */
     align-items: center;
         /* centers the column in the middle of page */
     justify-content:center;
@@ -18,4 +17,54 @@ body {
     overflow:hidden;
         /* hides scroll bars */
 }
+
+.search {
+    position: relative;
+    height: 50px;
+}
+
+#icon:hover {
+    color:rgb(183, 129, 254);
+}
+
+.search input {
+    background-color: white;
+    border: 0;
+    border-radius: 25px;
+    font-size: 15px;
+    height: 50px;
+    width: 50px;
+    transition: width 0.3s ease
+}
+
+.btn {
+    background-color: white;
+    border: 0;
+    border-radius: 25px;
+    cursor: pointer;
+    font-size: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 50px;
+    width: 50px;
+    transition: transform 0.3s ease;
+}
+
+.btn:focus, .input:focus {
+    outline: none;
+}
+
+.search.active .input {
+    width: 200px;
+}
+
+.search.active .btn {
+    transform: translateX(190px);
+    margin-left: 10px;
+}
+
+
+
+
 
